--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,6 +12,9 @@
   <tbody>
     <% @posts.each do |post| %>
       <tr>
+        <td><%= post.user_name.try(:first_name) %> <%= post.user_name.try(:last_name) %></td>
+        <td><%= post.title %></td>
+        <td><%= post.content %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
