--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,8 +16,8 @@
         <td><%= post.title %></td>
         <td><%= post.content %></td>
         <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td class="<%= 'post-owner' unless post.user_id == current_user.id %>"><%= link_to 'Edit', edit_post_path(post) %></td>
+        <td class="<%= 'post-owner' unless post.user_id == current_user.id %>"><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
