--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,5 @@
 <p id="notice"><%= notice %></p>
+<%= link_to 'update user', edit_user_path(try(:current_user)) %>
 
 <h1>Listing Posts</h1>
 
@@ -12,6 +13,7 @@
   <tbody>
     <% @posts.each do |post| %>
       <tr>
+        <td><%= image_tag post.user_name.try(:avatar).url(:small) %></td>
         <td><%= post.user_name.try(:first_name) %> <%= post.user_name.try(:last_name) %></td>
         <td><%= post.title %></td>
         <td><%= post.content %></td>
